--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"prettier": "^2.8.8",
+		"turbo": "^1.10.6",
 		"unbuild": "^1.2.1",
 		"vite": "^4.3.9",
 		"vitest": "^0.32.2"
