feat: parameter support
Closes #2

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"dev": "vitest dev",
 		"dev:website": "pnpm dev --filter website",
 		"build": "unbuild",
-		"test": "vitest run",
+		"test": "pnpm test:core && pnpm test:types",
+		"test:core": "vitest run",
 		"test:types": "tsc --noEmit",
 		"test:coverage": "vitest run --coverage",
 		"lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
