--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"dev": "vitest dev",
 		"dev:website": "pnpm --filter website dev",
 		"build": "unbuild",
+    "build:website": "pnpm --filter website build",
 		"test": "pnpm test:core && pnpm test:types",
 		"test:core": "vitest run",
 		"test:types": "tsc --noEmit",
