--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.1.0",
-    "type-fest": "^4.23.0",
+    "prettier": "^3.3.3",
     "typescript": "5",
     "typescript-eslint": "^7.17.0",
     "unbuild": "^1.2.1",
